--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Стяжка Пола</title>
-  <meta name="keywords" content="">
-  <meta name="description" content="">
+  <meta name="keywords" content="стяжка пола, полусухая стяжка пола, сухая стяжка пола, стяжка пола в Москве, стяжка пола в московской области, стяжка пола цена, полусухая стяжка пола цена, сухая стяжка пола цена">
+  <meta name="description" content="полусухая стяжка пола в Москве и области">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/css/uikit.min.css" />
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -18,7 +18,7 @@
         <div class="uk-grid uk-grid-small uk-child-width-auto uk-flex-middle uk-flex-right" uk-grid>
           <div><span class="worktime uk-visible@m">Без выходных с 9.00 до 22.00</span></div>
           <div><a href="tel:89262225850" class="phonenumber uk-visible@s">8 (926) 222 58 50</a></div>
-          <div><a href="#modal-call" class="uk-button uk-button-orange" uk-toggle>Заказать звонок</a></div>
+<!--          <div><a href="#modal-call" class="uk-button uk-button-orange" uk-toggle>Заказать звонок</a></div>-->
         </div>
       </header>
       <div class="info uk-text-center">
@@ -30,25 +30,14 @@
                     <li><a href="#premises" uk-scroll>Виды работ</a></li>
                     <li><a href="#ourprices" uk-scroll>Цены</a></li>
                     <li><a href="#argument" uk-scroll>О компании</a></li>
-                    <li><a href="#results" uk-scroll>Результаты</a></li>
+<!--                    <li><a href="#results" uk-scroll>Результаты</a></li>-->
                     <li><a href="#contacts" uk-scroll>Контакты</a></li>
                 </ul>
             </div>
           </nav>
           <h1>Полусухая стяжка пола</h1>
           <p class="uk-margin-remove-top uk-margin-medium-bottom">по<i class="deutsch"></i>немецкой технологии</p>
-          <form class="form_type-1" action="" method="get" name="form-2">
-            <legend>Укажите ваш контактный телефон - мастер перезвонит вам в течении 5 минут</legend>
-            <div class="uk-grid uk-grid-small uk-child-width-1-2@s uk-margin-top" uk-grid>
-              <div>
-                <input class="uk-input" name="basic_phone" placeholder="+7 927 123-45-67" />
-              </div>
-              <div>
-                <button type="submit" class="uk-button uk-button-tea uk-width-1-1 feedback">Отправить заявку</button>
-              </div>
-            </div>
-            <div class="circle uk-flex uk-flex-middle uk-visible@m"><span>Выезд замерщика <strong>бесплатный</strong></span></div>
-          </form>
+          <p><h3>Цена: от 550 рублей за м²</h3></p>
       </div>
     </div>
     <div class="uk-container uk-visible@m">
@@ -58,7 +47,7 @@
           <div class="uk-dropdown" uk-dropdown="mode: click;pos: bottom-center;offset:14">Описание для текущего поинта</div>
         </div>
         <div>
-          <img src="img/advantages/advantages-2.png" alt="Стоимость от 420 руб за кв. м." width="33" height="3" /><span>Стоимость от 420 руб за кв. м.</span>
+          <img src="img/advantages/advantages-2.png" alt="Стоимость от 550 руб за кв. м." width="33" height="3" /><span>Стоимость от 550 руб за кв. м.</span>
           <div class="uk-dropdown" uk-dropdown="mode: click;pos: bottom-center;offset:14">Описание для текущего поинта</div>
         </div>
         <div>
@@ -80,7 +69,7 @@
                 <span class="numeric">1</span>
               </div>
               <div class="uk-width-expand">
-                <b>Пневмонагнетатель</b> Песочно-цементный раствор автоматически транспортируется на 70 м. вверх и на 200 м. по поверхности.
+                <b>Демпферная лента</b>Установка демпферной ленты для компенсации теплового расширения стяжки
               </div>
             </div>
           </div>
@@ -120,13 +109,23 @@
                 <span class="numeric">5</span>
               </div>
               <div class="uk-width-expand">
-                <b>Финальная затирка</b> Идеально ровной поверхности пола добиваемся вибро-укладкой.
+                <b>Нарезка демпферных швов</b> Для идеальной надежности нарезаются демпферные швы
               </div>
             </div>
           </div>
           <div>
-            <a href="#modal-call" class="uk-button uk-button-tea uk-margin-small-top" uk-toggle>Оставить заявку</a>
+            <div class="uk-grid uk-grid-collapse" uk-grid>
+              <div class="uk-width-auto">
+                <span class="numeric">6</span>
+              </div>
+              <div class="uk-width-expand">
+                <b>Финальная затирка</b> Идеально ровной поверхности пола добиваемся вибро-укладкой.
+              </div>
+            </div>
           </div>
+<!--          <div>-->
+<!--            <a href="#modal-call" class="uk-button uk-button-tea uk-margin-small-top" uk-toggle>Оставить заявку</a>-->
+<!--          </div>-->
         </div>
         <div class="flybed uk-visible@s">
           <div class="one uk-inline">
@@ -221,23 +220,31 @@
 
   <div class="accuracy uk-container uk-text-left uk-margin-large-bottom">
     <h2>Узнайте точную стоимость стяжки пола своего объекта</h2>
-    <form class="form_type-1 uk-margin-medium-top" action="" method="get" name="form-2">
-      <legend>Укажите ваш контактный телефон - мастер перезвонит вам в течении 5 минут</legend>
-      <div class="uk-grid uk-grid-small uk-child-width-1-2@s uk-margin-top" uk-grid>
-        <div>
-          <input class="uk-input" name="basic_phone" placeholder="+7 927 123-45-67" />
-        </div>
-        <div>
-          <button type="submit" class="uk-button uk-button-tea uk-width-1-1 feedback">Отправить заявку</button>
-        </div>
-      </div>
-      <div class="circle uk-flex uk-flex-middle uk-visible@s"><span>Возможно, специальное <strong>предложение</strong></span></div>
-    </form>
+<!--    <form class="form_type-1 uk-margin-medium-top" action="" method="get" name="form-2">-->
+<!--      <legend>Укажите ваш контактный телефон - мастер перезвонит вам в течении 5 минут</legend>-->
+<!--      <div class="uk-grid uk-grid-small uk-child-width-1-2@s uk-margin-top" uk-grid>-->
+<!--        <div>-->
+<!--          <input class="uk-input" name="basic_phone" placeholder="+7 927 123-45-67" />-->
+<!--        </div>-->
+<!--        <div>-->
+<!--          <button type="submit" class="uk-button uk-button-tea uk-width-1-1 feedback">Отправить заявку</button>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="circle uk-flex uk-flex-middle uk-visible@s"><span>Возможно, специальное <strong>предложение</strong></span></div>-->
+<!--    </form>-->
+    <div>
+      <h4>Калькулятор стоимости</h4>
+      <label for="meters">Площадь (м²)</label>
+      <input type="number" id="meters">
+      <label for="height">Толщина стяжки в миллиметрах</label>
+      <input type="number" id="height">
+      <p>Цена:<span id="calcPrice"></span></p>
+    </div>
   </div>
 
   <div class="premises uk-container" id="premises">
     <h2>В каких помещениях<br/>возможна полусухая стяжка пола</h2>
-    <p>Мы делаем стяжку пола в квартирах, офисах, парковках - в любых помещениях и на любых этажах</p>
+    <p>Мы делаем стяжку, гидро и шумоизоляцию пола в квартирах, офисах, парковках - в любых помещениях и на любых этажах</p>
     <div class="uk-grid uk-child-width-1-2 uk-child-width-1-3@m uk-margin-medium-top uk-margin-large-bottom" uk-grid>
       <div>
         <div class="wrapper">
@@ -303,55 +310,55 @@
     <br/>
   </div>
 
-  <div class="ourprices uk-overflow-hidden" id="ourprices">
-    <div class="uk-container uk-position-relative">
-      <h2>Наши цены на полусухую стяжку пола с учетом работы</h2>
-      <table class="uk-table uk-table-middle custom-table uk-text-center uk-margin-medium-top">
-        <thead>
-          <tr>
-            <th>Площадь помещения</th>
-            <th>Толщина слоя 4,5 см</th>
-            <th>Толщина слоя 5,5 см</th>
-          </tr>
-        </thead>
-        <tbody>
-            <tr>
-              <td>4501 - 10000 м<sup>2</sup></td>
-              <td>420 руб/м<sup>2</sup><span>-22%</span></td>
-              <td>420 руб/м<sup>2</sup> + 50 руб/м<sup>2</sup></td>
-            </tr>
-            <tr>
-              <td>901 - 4500 м<sup>2</sup></td>
-              <td>430 руб/м<sup>2</sup></td>
-              <td>430 руб/м<sup>2</sup> + 50 руб/м<sup>2</sup></td>
-            </tr>
-            <tr>
-              <td>301 - 900 м<sup>2</sup></td>
-              <td>449 руб/м<sup>2</sup></td>
-              <td>449 руб/м<sup>2</sup> + 50 руб/м<sup>2</sup></td>
-            </tr>
-            <tr>
-              <td>151 - 300 м<sup>2</sup></td>
-              <td>480 руб/м<sup>2</sup></td>
-              <td>480 руб/м<sup>2</sup> + 50 руб/м<sup>2</sup></td>
-            </tr>
-            <tr>
-              <td>51 - 150 м<sup>2</sup></td>
-              <td>585 руб/м<sup>2</sup></td>
-              <td>585 руб/м<sup>2</sup> + 50 руб/м<sup>2</sup></td>
-            </tr>
-            <tr>
-              <td>1 - 50 м<sup>2</sup></td>
-              <td>720 руб/м<sup>2</sup></td>
-              <td>720 руб/м<sup>2</sup> + 50 руб/м<sup>2</sup></td>
-            </tr>
-        </tbody>
-      </table>
-      <p>Цена полусухой стяжки пола - от 420 рублей за квадратный метр работы с учетом материалов и доставки оборудования. На стоимость полусухой стяжки пола влияют: средняя толщина укладки (в зависимости от перепадов), удаленность от МКАД, этаж, наличие грузового лифта и прочее. </p>
-      <p>Из чего сделать полы в квартире, зависит только от Вас, но воспользовавшись услугами мастеров нашей компании, Вы сэкономите время, деньги и нервы.</p>
-      <div class="man"></div>
-    </div>
-  </div>
+<!--  <div class="ourprices uk-overflow-hidden" id="ourprices">-->
+<!--    <div class="uk-container uk-position-relative">-->
+<!--      <h2>Наши цены на полусухую стяжку пола с учетом работы</h2>-->
+<!--      <table class="uk-table uk-table-middle custom-table uk-text-center uk-margin-medium-top">-->
+<!--        <thead>-->
+<!--          <tr>-->
+<!--            <th>Площадь помещения</th>-->
+<!--            <th>Толщина слоя 4,5 см</th>-->
+<!--            <th>Толщина слоя 5,5 см</th>-->
+<!--          </tr>-->
+<!--        </thead>-->
+<!--        <tbody>-->
+<!--            <tr>-->
+<!--              <td>4501 - 10000 м<sup>2</sup></td>-->
+<!--              <td>550 руб/м<sup>2</sup></td>-->
+<!--              <td>550 руб/м<sup>2</sup> + 65 руб/м<sup>2</sup></td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--              <td>901 - 4500 м<sup>2</sup></td>-->
+<!--              <td>570 руб/м<sup>2</sup></td>-->
+<!--              <td>570 руб/м<sup>2</sup> + 65 руб/м<sup>2</sup></td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--              <td>301 - 900 м<sup>2</sup></td>-->
+<!--              <td>590 руб/м<sup>2</sup></td>-->
+<!--              <td>590 руб/м<sup>2</sup> + 65 руб/м<sup>2</sup></td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--              <td>151 - 300 м<sup>2</sup></td>-->
+<!--              <td>630 руб/м<sup>2</sup></td>-->
+<!--              <td>630 руб/м<sup>2</sup> + 65 руб/м<sup>2</sup></td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--              <td>51 - 150 м<sup>2</sup></td>-->
+<!--              <td>770 руб/м<sup>2</sup></td>-->
+<!--              <td>770 руб/м<sup>2</sup> + 65 руб/м<sup>2</sup></td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--              <td>1 - 50 м<sup>2</sup></td>-->
+<!--              <td>950 руб/м<sup>2</sup></td>-->
+<!--              <td>950 руб/м<sup>2</sup> + 65 руб/м<sup>2</sup></td>-->
+<!--            </tr>-->
+<!--        </tbody>-->
+<!--      </table>-->
+<!--      <p>Цена полусухой стяжки пола - от 550 рублей за квадратный метр работы с учетом материалов и доставки оборудования. На стоимость полусухой стяжки пола влияют: средняя толщина укладки (в зависимости от перепадов), удаленность от МКАД, этаж, наличие грузового лифта и прочее. </p>-->
+<!--      <p>Из чего сделать полы в квартире, зависит только от Вас, но воспользовавшись услугами мастеров нашей компании, Вы сэкономите время, деньги и нервы.</p>-->
+<!--      <div class="man"></div>-->
+<!--    </div>-->
+<!--  </div>-->
 
   <div class="argument" id="argument">
     <div class="uk-container">
@@ -427,20 +434,20 @@
 
       <hr class="uk-margin-medium-top uk-margin-remove-bottom" />
     </div>
-    <div class="accuracy uk-container uk-text-left">
-      <h2>Узнайте точную стоимость стяжки пола своего объекта</h2>
-      <form class="form_type-1 uk-margin-medium-top" action="" method="get" name="form-2">
-        <legend>Укажите ваш контактный телефон - мастер перезвонит вам в течении 5 минут</legend>
-        <div class="uk-grid uk-grid-small uk-child-width-1-2@s uk-margin-top" uk-grid>
-          <div>
-            <input class="uk-input" name="basic_phone" placeholder="+7 927 123-45-67" />
-          </div>
-          <div>
-            <button type="submit" class="uk-button uk-button-tea uk-width-1-1 feedback">Отправить заявку</button>
-          </div>
-        </div>
-      </form>
-    </div>
+<!--    <div class="accuracy uk-container uk-text-left">-->
+<!--      <h2>Узнайте точную стоимость стяжки пола своего объекта</h2>-->
+<!--      <form class="form_type-1 uk-margin-medium-top" action="" method="get" name="form-2">-->
+<!--        <legend>Укажите ваш контактный телефон - мастер перезвонит вам в течении 5 минут</legend>-->
+<!--        <div class="uk-grid uk-grid-small uk-child-width-1-2@s uk-margin-top" uk-grid>-->
+<!--          <div>-->
+<!--            <input class="uk-input" name="basic_phone" placeholder="+7 927 123-45-67" />-->
+<!--          </div>-->
+<!--          <div>-->
+<!--            <button type="submit" class="uk-button uk-button-tea uk-width-1-1 feedback">Отправить заявку</button>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </form>-->
+<!--    </div>-->
 
     <div class="uk-container">
       <div class="advantages small uk-visible@m uk-grid uk-grid-small uk-child-width-1-3 uk-flex-center uk-flex-middle uk-text-center" uk-grid>
@@ -448,7 +455,7 @@
           <img src="img/advantages/advantages-1.png" alt="2 года гарантия на пол" width="28" height="34" /><span>2 года гарантия на пол</span>
           <div class="uk-dropdown" uk-dropdown="mode: click;pos: bottom-center;offset:14">Описание для текущего поинта</div></div>
         <div>
-          <img src="img/advantages/advantages-2.png" alt="Стоимость от 420 руб за кв. м." width="33" height="3" /><span>Стоимость от 420 руб за кв. м.</span>
+          <img src="img/advantages/advantages-2.png" alt="Стоимость от 550 руб за кв. м." width="33" height="3" /><span>Стоимость от 420 руб за кв. м.</span>
           <div class="uk-dropdown" uk-dropdown="mode: click;pos: bottom-center;offset:14">Описание для текущего поинта</div></div>
         <div>
           <img src="img/advantages/advantages-3.png" alt="Работаем по договору" width="26" height="34" /><span>Работаем по договору</span>
@@ -767,7 +774,7 @@
           <div>
             <img src="img/footer/icon-2.png" alt="" width="55" height="55" />
             <a class="uk-margin-small-right" href="tel:89262225850">+7 (926) 222-58-50</a>
-            <a href="#modal-call" class="uk-button uk-button-grey uk-visible@m" uk-toggle>Заказать звонок</a>
+<!--            <a href="#modal-call" class="uk-button uk-button-grey uk-visible@m" uk-toggle>Заказать звонок</a>-->
           </div>
           <div>
             <img src="img/footer/icon-3.png" alt="" width="55" height="55" />
@@ -784,28 +791,28 @@
     </div>
   </footer>
 
-  <div id="modal-call" uk-modal>
-    <div class="uk-modal-dialog uk-modal-body uk-text-center">
-      <button class="uk-modal-close-default" type="button" uk-close></button>
-      <form action="" method="get" name="form-1">
-        <span class="uk-modal-title">Оставить заявку</span>
-        <p class="uk-margin-small-top">Укажите ваши контактные данные - мастер перезвонить вам в течение 5 минут</p>
-        <div class="uk-grid uk-grid-small uk-child-width-1-2@s" uk-grid>
-          <div><input class="uk-input" type="text" placeholder="Ваше имя" name="modalname"/></div>
-          <div><input class="uk-input" type="text" placeholder="+7 927 123-45-67" name="modalphone"/></div>
-          <div class="uk-width-1-1"><input class="uk-width-1-1 uk-button uk-button-tea feedback" type="button" value="Отправить заявку" /></div>
-        </div>
-        <input class="uk-hidden" type="text" name="modalinfo" />
-      </form>
-    </div>
-  </div>
+<!--  <div id="modal-call" uk-modal>-->
+<!--    <div class="uk-modal-dialog uk-modal-body uk-text-center">-->
+<!--      <button class="uk-modal-close-default" type="button" uk-close></button>-->
+<!--      <form action="" method="get" name="form-1">-->
+<!--        <span class="uk-modal-title">Оставить заявку</span>-->
+<!--        <p class="uk-margin-small-top">Укажите ваши контактные данные - мастер перезвонить вам в течение 5 минут</p>-->
+<!--        <div class="uk-grid uk-grid-small uk-child-width-1-2@s" uk-grid>-->
+<!--          <div><input class="uk-input" type="text" placeholder="Ваше имя" name="modalname"/></div>-->
+<!--          <div><input class="uk-input" type="text" placeholder="+7 927 123-45-67" name="modalphone"/></div>-->
+<!--          <div class="uk-width-1-1"><input class="uk-width-1-1 uk-button uk-button-tea feedback" type="button" value="Отправить заявку" /></div>-->
+<!--        </div>-->
+<!--        <input class="uk-hidden" type="text" name="modalinfo" />-->
+<!--      </form>-->
+<!--    </div>-->
+<!--  </div>-->
 
-  <div id="modal-success" uk-modal="" class="uk-modal">
-    <div class="uk-modal-dialog uk-modal-body uk-text-center">
-        <span class="uk-modal-title">Спасибо</span>
-        <p>Ваше сообщение было успешно отправлено! Ожидайте звонка менеджера.</p>
-    </div>
-  </div>
+<!--  <div id="modal-success" uk-modal="" class="uk-modal">-->
+<!--    <div class="uk-modal-dialog uk-modal-body uk-text-center">-->
+<!--        <span class="uk-modal-title">Спасибо</span>-->
+<!--        <p>Ваше сообщение было успешно отправлено! Ожидайте звонка менеджера.</p>-->
+<!--    </div>-->
+<!--  </div>-->
 
   <div class="scripts uk-hidden">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/js/uikit.min.js"></script>
