--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </nav>
           <h1>Полусухая стяжка пола</h1>
           <p class="uk-margin-remove-top uk-margin-medium-bottom">по<i class="deutsch"></i>немецкой технологии</p>
-          <p><h3>Цена: от 550 рублей за м²</h3></p>
+          <p><h3>Цена: от 900 рублей за м²</h3></p>
       </div>
     </div>
     <div class="uk-container uk-visible@m">
@@ -47,7 +47,7 @@
           <div class="uk-dropdown" uk-dropdown="mode: click;pos: bottom-center;offset:14">Описание для текущего поинта</div>
         </div>
         <div>
-          <img src="img/advantages/advantages-2.png" alt="Стоимость от 550 руб за кв. м." width="33" height="3" /><span>Стоимость от 550 руб за кв. м.</span>
+          <img src="img/advantages/advantages-2.png" alt="Стоимость от 900 руб за кв. м." width="33" height="3" /><span>Стоимость от 900 руб за кв. м.</span>
           <div class="uk-dropdown" uk-dropdown="mode: click;pos: bottom-center;offset:14">Описание для текущего поинта</div>
         </div>
         <div>
@@ -238,7 +238,8 @@
       <input type="number" id="meters">
       <label for="height">Толщина стяжки в миллиметрах</label>
       <input type="number" id="height">
-      <p>Цена:<span id="calcPrice"></span></p>
+      <p>Цена: <span id="calcPrice"></span></p>
+      <p>Примечание: <span>Рекомендуемая минимальная толщина стяжки 50мм</span></p>
     </div>
   </div>
 
@@ -310,18 +311,18 @@
     <br/>
   </div>
 
-<!--  <div class="ourprices uk-overflow-hidden" id="ourprices">-->
-<!--    <div class="uk-container uk-position-relative">-->
-<!--      <h2>Наши цены на полусухую стяжку пола с учетом работы</h2>-->
-<!--      <table class="uk-table uk-table-middle custom-table uk-text-center uk-margin-medium-top">-->
-<!--        <thead>-->
-<!--          <tr>-->
-<!--            <th>Площадь помещения</th>-->
-<!--            <th>Толщина слоя 4,5 см</th>-->
-<!--            <th>Толщина слоя 5,5 см</th>-->
-<!--          </tr>-->
-<!--        </thead>-->
-<!--        <tbody>-->
+  <div class="ourprices uk-overflow-hidden" id="ourprices">
+    <div class="uk-container uk-position-relative">
+      <h2>Наши цены на полусухую стяжку пола с учетом работы</h2>
+      <table class="uk-table uk-table-middle custom-table uk-text-center uk-margin-medium-top">
+        <thead>
+          <tr>
+            <th>Площадь помещения</th>
+            <th>Толщина слоя 40 - 80 мм</th>
+            <th>Толщина слоя от 80 до 150 мм</th>
+          </tr>
+        </thead>
+        <tbody>
 <!--            <tr>-->
 <!--              <td>4501 - 10000 м<sup>2</sup></td>-->
 <!--              <td>550 руб/м<sup>2</sup></td>-->
@@ -332,33 +333,33 @@
 <!--              <td>570 руб/м<sup>2</sup></td>-->
 <!--              <td>570 руб/м<sup>2</sup> + 65 руб/м<sup>2</sup></td>-->
 <!--            </tr>-->
-<!--            <tr>-->
-<!--              <td>301 - 900 м<sup>2</sup></td>-->
-<!--              <td>590 руб/м<sup>2</sup></td>-->
-<!--              <td>590 руб/м<sup>2</sup> + 65 руб/м<sup>2</sup></td>-->
-<!--            </tr>-->
-<!--            <tr>-->
-<!--              <td>151 - 300 м<sup>2</sup></td>-->
-<!--              <td>630 руб/м<sup>2</sup></td>-->
-<!--              <td>630 руб/м<sup>2</sup> + 65 руб/м<sup>2</sup></td>-->
-<!--            </tr>-->
-<!--            <tr>-->
-<!--              <td>51 - 150 м<sup>2</sup></td>-->
-<!--              <td>770 руб/м<sup>2</sup></td>-->
-<!--              <td>770 руб/м<sup>2</sup> + 65 руб/м<sup>2</sup></td>-->
-<!--            </tr>-->
-<!--            <tr>-->
-<!--              <td>1 - 50 м<sup>2</sup></td>-->
-<!--              <td>950 руб/м<sup>2</sup></td>-->
-<!--              <td>950 руб/м<sup>2</sup> + 65 руб/м<sup>2</sup></td>-->
-<!--            </tr>-->
-<!--        </tbody>-->
-<!--      </table>-->
-<!--      <p>Цена полусухой стяжки пола - от 550 рублей за квадратный метр работы с учетом материалов и доставки оборудования. На стоимость полусухой стяжки пола влияют: средняя толщина укладки (в зависимости от перепадов), удаленность от МКАД, этаж, наличие грузового лифта и прочее. </p>-->
-<!--      <p>Из чего сделать полы в квартире, зависит только от Вас, но воспользовавшись услугами мастеров нашей компании, Вы сэкономите время, деньги и нервы.</p>-->
-<!--      <div class="man"></div>-->
-<!--    </div>-->
-<!--  </div>-->
+            <tr>
+              <td>201 - 500 м<sup>2</sup></td>
+              <td>900 руб/м<sup>2</sup></td>
+              <td>900 руб/м<sup>2</sup> + 65 руб/м<sup>2</sup></td>
+            </tr>
+            <tr>
+              <td>101 - 200 м<sup>2</sup></td>
+              <td>1100 руб/м<sup>2</sup></td>
+              <td>110 руб/м<sup>2</sup> + 65 руб/м<sup>2</sup></td>
+            </tr>
+            <tr>
+              <td>51 - 100 м<sup>2</sup></td>
+              <td>1300 руб/м<sup>2</sup></td>
+              <td>1300 руб/м<sup>2</sup> + 65 руб/м<sup>2</sup></td>
+            </tr>
+            <tr>
+              <td>1 - 50 м<sup>2</sup></td>
+              <td>1400 руб/м<sup>2</sup></td>
+              <td>1400 руб/м<sup>2</sup> + 65 руб/м<sup>2</sup></td>
+            </tr>
+        </tbody>
+      </table>
+      <p>Цена полусухой стяжки пола - от 900 рублей за квадратный метр работы с учетом материалов и доставки оборудования. На стоимость полусухой стяжки пола влияют: средняя толщина укладки (в зависимости от перепадов), удаленность от МКАД, этаж, наличие грузового лифта и прочее. </p>
+      <p>Из чего сделать полы в квартире, зависит только от Вас, но воспользовавшись услугами мастеров нашей компании, Вы сэкономите время, деньги и нервы.</p>
+      <div class="man"></div>
+    </div>
+  </div>
 
   <div class="argument" id="argument">
     <div class="uk-container">
@@ -455,7 +456,7 @@
           <img src="img/advantages/advantages-1.png" alt="2 года гарантия на пол" width="28" height="34" /><span>2 года гарантия на пол</span>
           <div class="uk-dropdown" uk-dropdown="mode: click;pos: bottom-center;offset:14">Описание для текущего поинта</div></div>
         <div>
-          <img src="img/advantages/advantages-2.png" alt="Стоимость от 550 руб за кв. м." width="33" height="3" /><span>Стоимость от 420 руб за кв. м.</span>
+          <img src="img/advantages/advantages-2.png" alt="Стоимость от 550 руб за кв. м." width="33" height="3" /><span>Стоимость от 900 руб за кв. м.</span>
           <div class="uk-dropdown" uk-dropdown="mode: click;pos: bottom-center;offset:14">Описание для текущего поинта</div></div>
         <div>
           <img src="img/advantages/advantages-3.png" alt="Работаем по договору" width="26" height="34" /><span>Работаем по договору</span>
