--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <meta name="description" content="полусухая стяжка пола в Москве и области">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/css/uikit.min.css" />
   <link rel="stylesheet" href="css/main.css">
+  <meta property="og:title" content="Стяжка пола в Москве от 900 руб/м2"/>
+<!--  <meta property="og:description" content="Стяжка пола "/>-->
+  <meta property="og:image" content=""/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content= "https://xn----ctbcdwtflcaecj0b.xn--p1ai/" />
+  <meta property="og:locale" content="ru_RU">
 </head>
 
 <body>
@@ -232,12 +238,12 @@
 <!--      </div>-->
 <!--      <div class="circle uk-flex uk-flex-middle uk-visible@s"><span>Возможно, специальное <strong>предложение</strong></span></div>-->
 <!--    </form>-->
-    <div>
+    <div class="calculator">
       <h4>Калькулятор стоимости</h4>
-      <label for="meters">Площадь (м²)</label>
-      <input type="number" id="meters">
-      <label for="height">Толщина стяжки в миллиметрах</label>
-      <input type="number" id="height">
+      <label for="meters">Площадь пола (м²)</label>
+      <input type="number" id="meters" class="uk-input">
+      <label for="height">Толщина стяжки (мм)</label>
+      <input type="number" id="height" class="uk-input">
       <p>Цена: <span id="calcPrice"></span></p>
       <p>Примечание: <span>Рекомендуемая минимальная толщина стяжки 50мм</span></p>
     </div>
@@ -254,7 +260,7 @@
             <span class="uk-button uk-button-tea uk-position-center">Оставить заявку</span>
           </a>
           <h3>Дома и коттеджи</h3>
-          <p>от 5900 р. за стяжку пола 60 м<sup>2</sup></p>
+<!--          <p>от 5900 р. за стяжку пола 60 м<sup>2</sup></p>-->
         </div>
       </div>
       <div>
@@ -264,7 +270,7 @@
             <span class="uk-button uk-button-tea uk-position-center">Оставить заявку</span>
           </a>
           <h3>Квартиры</h3>
-          <p>от 5900 р. за стяжку пола 60 м<sup>2</sup></p>
+<!--          <p>от 5900 р. за стяжку пола 60 м<sup>2</sup></p>-->
         </div>
       </div>
       <div>
@@ -274,7 +280,7 @@
             <span class="uk-button uk-button-tea uk-position-center">Оставить заявку</span>
           </a>
           <h3>Офисы</h3>
-          <p>от 5900 р. за стяжку пола 60 м<sup>2</sup></p>
+<!--          <p>от 5900 р. за стяжку пола 60 м<sup>2</sup></p>-->
         </div>
       </div>
       <div>
@@ -284,7 +290,7 @@
             <span class="uk-button uk-button-tea uk-position-center">Оставить заявку</span>
           </a>
           <h3>Парковки, гаражи</h3>
-          <p>от 5900 р. за стяжку пола 60 м<sup>2</sup></p>
+<!--          <p>от 5900 р. за стяжку пола 60 м<sup>2</sup></p>-->
         </div>
       </div>
       <div>
@@ -294,7 +300,7 @@
             <span class="uk-button uk-button-tea uk-position-center">Оставить заявку</span>
           </a>
           <h3>Промышленные помещения</h3>
-          <p>от 5900 р. за стяжку пола 60 м<sup>2</sup></p>
+<!--          <p>от 5900 р. за стяжку пола 60 м<sup>2</sup></p>-->
         </div>
       </div>
       <div>
@@ -304,7 +310,7 @@
             <span class="uk-button uk-button-tea uk-position-center">Оставить заявку</span>
           </a>
           <h3>Коммерческие помещения</h3>
-          <p>от 5900 р. за стяжку пола 60 м<sup>2</sup></p>
+<!--          <p>от 5900 р. за стяжку пола 60 м<sup>2</sup></p>-->
         </div>
       </div>
     </div>
@@ -819,7 +825,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/js/uikit.min.js"></script>
       <script src="js/uikit-icons.min.js"></script>
       <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-      <script src="feedback/js/feedback.js"></script>
+<!--      <script src="feedback/js/feedback.js"></script>-->
       <script src="js/all.js"></script>
   </div>
 </body>
